Add leetcode p895 solution2 (time limit exceeded)